[DATAVIC-130] Fix pagination horizontal overflow at mobile breakpoint.

--- a/ckanext/datavic_odp_theme/grunt/sass/_ckan_reset.scss
+++ b/ckanext/datavic_odp_theme/grunt/sass/_ckan_reset.scss
@@ -2,11 +2,19 @@ body {
   background-color: white;
   background-image: none;
   color: inherit;
+  @media (max-width:767px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 [role="main"] {
   background: none;
   padding-top: 0;
+  @media (max-width:767px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 .wrapper {
