--- a/ckanext/datavic_odp_theme/grunt/sass/_pagination.scss
+++ b/ckanext/datavic_odp_theme/grunt/sass/_pagination.scss
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+.module .pagination {
+  box-sizing: border-box;
+}
+
 .module .pagination li a {
   border: none;
   padding: 0;
